code/deploy/local-stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
  labels:
    app: books-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: books-app
  template:
    metadata:
      labels:
        app: books-app
    spec:
      containers:
        - name: webbooks
          image: books
          ports:
            - containerPort: 2200
          livenessProbe:
            httpGet:
              path: /healthz
              port: 2200
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
                path: /healthz
                port: 2200
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food
  labels:
    app: food-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: food-app
  template:
    metadata:
      labels:
        app: food-app
    spec:
      containers:
        - name: webfood
          image: food
          ports:
            - containerPort: 2100
          livenessProbe:
            httpGet:
              path: /healthz
              port: 2100
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
                path: /healthz
                port: 2100
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
  labels:
    app: static-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: static-app
  template:
    metadata:
      labels:
        app: static-app
    spec:
      containers:
        - name: webstatic
          image: static
          ports:
            - containerPort: 2000
          livenessProbe:
            httpGet:
             path: /healthz
             port: 2100
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 2100
            initialDelaySeconds: 3
            periodSeconds: 5
